[gd_scene load_steps=12 format=2]

[ext_resource path="res://scn/ChopChop.gd" type="Script" id=1]
[ext_resource path="res://img/skin.png" type="Texture" id=2]
[ext_resource path="res://img/chopchop/chop1.png" type="Texture" id=3]
[ext_resource path="res://scn/BloodColorRamp.tres" type="Texture" id=4]
[ext_resource path="res://img/scalpel.png" type="Texture" id=5]
[ext_resource path="res://img/saw1.png" type="Texture" id=6]
[ext_resource path="res://img/saw2.png" type="Texture" id=7]

[sub_resource type="ParticlesMaterial" id=1]

render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 3.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 85.0
initial_velocity_random = 0.5
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -80.0
linear_accel_random = 0.5
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 4.0
scale_random = 0.0
color_ramp = ExtResource( 4 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color", "Emission Shape", "Initial Velocity" ]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="Animation" id=3]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hide_finished"
} ]
}

[sub_resource type="Animation" id=4]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="ChopChop" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Visibility" ]

[node name="Wrapper" type="Panel" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -192.0
margin_top = -144.0
margin_right = 192.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="BG" type="TextureRect" parent="Wrapper" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 2

[node name="Path" type="TextureRect" parent="Wrapper" index="1"]

modulate = Color( 0, 0.58255, 0.738281, 0.156863 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Visibility" ]

[node name="CutPath" type="TextureRect" parent="Wrapper" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
expand = true
stretch_mode = 0

[node name="bloodParticles" type="Particles2D" parent="Wrapper" index="3"]

emitting = false
amount = 128
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.5
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 1 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Transform" ]

[node name="tol" type="Node2D" parent="Wrapper" index="4"]

[node name="scalpel" type="Sprite" parent="Wrapper/tol" index="0"]

visible = false
position = Vector2( 14, 14 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="saw" type="AnimatedSprite" parent="Wrapper/tol" index="1"]

position = Vector2( 14, 14 )
frames = SubResource( 2 )
animation = "default"
_sections_unfolded = [ "Transform" ]

[node name="ShowHideAnimation" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Hide = SubResource( 3 )
anims/Show = SubResource( 4 )
blend_times = [  ]


